fixed spacing on standardized test sections

--- a/Links/SCSS/_standardized-tests.scss
+++ b/Links/SCSS/_standardized-tests.scss
@@ -1,7 +1,6 @@
 .stintro {
     &-text {
         max-width: 55rem;
-        margin-bottom: 3rem;
 
         h1 {
             margin: auto 2.5rem;
