--- a/Links/SCSS/styles.css
+++ b/Links/SCSS/styles.css
@@ -585,7 +585,6 @@ a {
 
 .stintro-text {
   max-width: 55rem;
-  margin-bottom: 3rem;
 }
 
 .stintro-text h1 {
